--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>aplicar tu conocimiento para tus nuevos proyectos en el futuro.
 </ul>
 <video controls poster="poster.png">
-<source src="video.mp4" type="video/mp4"></source>
+<source src="video.MP4" type="video/mp4"></source>
 </video>
 <br>
 </div>
